client/src/App.css
/* ... */
.footer-section .custom-social li a:hover {
  background: #3b5d50;
  color: #ffffff;
}

.footer-section .border-top {
  border-color: #dce5e4;
}

.footer-section .border-top.copyright {
  font-size: 14px !important;
}

.hero {
  background: #3b5d50;
  padding: calc(4rem - 30px) 0 0rem 0;
}

@media (min-width: 768px) {
  .hero {
    padding: calc(4rem - 30px) 0 4rem 0;
  }
}

@media (min-width: 992px) {
  .hero {
    padding: calc(8rem - 30px) 0 8rem 0;
  }
}

.hero .intro-excerpt {
  position: relative;
  z-index: 4;
}

@media (min-width: 992px) {
  .hero .intro-excerpt {
    max-width: 450px;
  }
}

.hero h1 {
  font-weight: 700;
  color: #ffffff;
  margin-bottom: 30px;
  font-size: 2rem;
}

@media (min-width: 768px) {
  .hero h1 {
    font-size: 2.25rem;
  }
}

@media (min-width: 992px) {
  .hero h1 {
    font-size: 2.5rem;
  }
}

@media (min-width: 1200px) {
  .hero h1 {
    font-size: 2.875rem;
  }
}

@media (min-width: 1400px) {
  .hero h1 {
    font-size: 3.375rem;
  }
}

.hero p {
  color: rgba(255, 255, 255, 0.5);
  margin-bottom: 30px;
}

.hero .hero-img-wrap {
  position:relative ;
}

.hero .hero-img-wrap img {
  position: relative;
  top: 0px;
  right: 0px;
  z-index: 2;
  max-width: 700px;
 
}

@media (min-width: 768px) {
  .hero .hero-img-wrap img {
    right: 0px;
    left: -100px;
  }
}

@media (min-width: 992px) {
  .hero .hero-img-wrap img {
    left: 0px;
    top: -80px;
    position: absolute;
    right: -50px;
  }
}

@media (min-width: 1200px) {
  .hero .hero-img-wrap img {
    left: 0px;
    top: -80px;
    right: -100px;
  }
}

.hero .hero-img-wrap:after {
  content: "";
  position: absolute;
  width: 255px;
  height: 217px;
  background-image: url("../public/images/couch.png");
  background-size: contain;
  background-repeat: no-repeat;
  right: -100px;
  top: -0px;
}

@media (min-width: 1200px) {
  .hero .hero-img-wrap:after {
    top: -40px;
  }
}

.btn {
  font-weight: 600;
  padding: 12px 30px;
  border-radius: 30px;
  color: #ffffff;
  background: #2f2f2f;
  border-color: #2f2f2f;
}

.btn:hover {
  color: #ffffff;
  background: #222222;
  border-color: #222222;
}

.btn:active,
.btn:focus {
  outline: none !important;
  -webkit-box-shadow: none;
  box-shadow: none;
}

.btn.btn-primary {
  background: #3b5d50;
  border-color: #3b5d50;
}

.btn.btn-primary:hover {
  background: #314d43;
  border-color: #314d43;
}

.btn.btn-secondary {
  color: #2f2f2f;
  background: #f9bf29;
  border-color: #f9bf29;
}

.btn.btn-secondary:hover {
  background: #f8b810;
  border-color: #f8b810;
}

.btn.btn-white-outline {
  background: transparent;
  border-width: 2px;
  border-color: rgba(255, 255, 255, 0.3);
}

.btn.btn-white-outline:hover {
  border-color: white;
  color: #ffffff;
}

.section-title {
  color: #2f2f2f;
}

.product-section {
  padding: 7rem 0;
}

.product-section .product-item {
  text-align: center;
  text-decoration: none;
  display: block;
  position: relative;
  padding-bottom: 50px;
  cursor: pointer;
}

.product-section .product-item .product-thumbnail {
  margin-bottom: 30px;
  position: relative;
  top: 0;
  -webkit-transition: .3s all ease;
  -o-transition: .3s all ease;
  transition: .3s all ease;
}

.product-section .product-item h3 {
  font-weight: 600;
  font-size: 16px;
}

.product-section .product-item strong {
  font-weight: 800 !important;
  font-size: 18px !important;
}

.product-section .product-item h3,
.product-section .product-item strong {
  color: #2f2f2f;
  text-decoration: none;
}

.product-section .product-item .icon-cross {
  position: absolute;
  width: 35px;
  height: 35px;
  display: inline-block;
  background: #2f2f2f;
  bottom: 15px;
  left: 50%;
  -webkit-transform: translateX(-50%);
  -ms-transform: translateX(-50%);
  transform: translateX(-50%);
  margin-bottom: -17.5px;
  border-radius: 50%;
  opacity: 0;
  visibility: hidden;
  -webkit-transition: .3s all ease;
  -o-transition: .3s all ease;
  transition: .3s all ease;
}

.product-section .product-item .icon-cross img {
  position: absolute;
  left: 50%;
  top: 50%;
  -webkit-transform: translate(-50%, -50%);
  -ms-transform: translate(-50%, -50%);
  transform: translate(-50%, -50%);
}

.product-section .product-item:before {
  bottom: 0;
  left: 0;
  right: 0;
  position: absolute;
  content: "";
  background: #dce5e4;
  height: 0%;
  z-index: -1;
  border-radius: 10px;
  -webkit-transition: .3s all ease;
  -o-transition: .3s all ease;
  transition: .3s all ease;
}

.product-section .product-item:hover .product-thumbnail {
  top: -25px;
}

.product-section .product-item:hover .icon-cross {
  bottom: 0;
  opacity: 1;
  visibility: visible;
}

.product-section .product-item:hover:before {
  height: 70%;
}

.why-choose-section {
  padding: 7rem 0;
}

.why-choose-section .img-wrap {
  position: relative;
}

.why-choose-section .img-wrap:before {
  position: absolute;
  content: "";
  width: 255px;
  height: 217px;
  background-image: url("../public/images/dots-yellow.svg");
  background-repeat: no-repeat;
  background-size: contain;
  -webkit-transform: translate(-40%, -40%);
  -ms-transform: translate(-40%, -40%);
  transform: translate(-40%, -40%);
  z-index: -1;
}

.why-choose-section .img-wrap img {
  border-radius: 20px;
}

.feature {
  margin-bottom: 30px;
}

.feature .icon {
  display: inline-block;
  position: relative;
  margin-bottom: 20px;
}

.feature .icon:before {
  content: "";
  width: 33px;
  height: 33px;
  position: absolute;
  background: rgba(59, 93, 80, 0.2);
  border-radius: 50%;
  right: -8px;
  bottom: 0;
}

.feature h3 {
  font-size: 14px;
  color: #2f2f2f;
}

.feature p {
  font-size: 14px;
  line-height: 22px;
  color: #6a6a6a;
}

.we-help-section {
  padding: 7rem 0;
}

.we-help-section .imgs-grid {
  display: -ms-grid;
  display: grid;
}
/* ... */

